fix(html): reduced size of pattern cube to be viewable on small screens

--- a/src/app/components/hero-editor-pattern/hero-editor-pattern.component.css
+++ b/src/app/components/hero-editor-pattern/hero-editor-pattern.component.css
@@ -15,8 +15,8 @@
 
 .battlefield-case {
     border: 1px solid black;
-    height: 25px;
-    width: 25px;
+    height: 20px;
+    width: 20px;
     display: inline-block;
     margin-right: 3px;
     cursor: pointer;
